@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-23T01:45:10Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 3 ],
-  "count_decinc" : [ -1, +3 ],
+  "timestamp" : "2022-10-23T08:22:55Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 3 ],
+  "count_decinc" : [ -2, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -1, +2 ]
