@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-10-23T01:45:10Z",
+  "timestamp" : "2022-10-23T08:22:55Z",
   "count_outdated" : 591,
   "uniques_outdated" : 338,
   "count" : 638,
-  "uniques" : 364,
+  "uniques" : 365,
   "clones" : [
     {
       "timestamp": "2022-10-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 3 ],
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 5 ],
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ]
+    },
+    {
+      "timestamp": "2022-10-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
