@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-10-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-10-22T00:00:00Z",
       "count": 5,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-10-23T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
